<resources>
    <string name="app_name">Proyecto Final</string>
    <string name="text_results_title_device">Resultados del dispositivo</string>
    <string name="text_results_title_manual">Resultados manuales</string>
    <string name="text_results_title_arm">Brazo usado</string>
    <string name="text_results_title_initials">Iniciales de paciente</string>
    <string name="text_diastolic">diastólica</string>
    <string name="text_systolic">sistólica</string>
    <string name="text_forward_slash">/</string>
    <string name="button_accept">Aceptar</string>
    <string name="button_retry">Reintentar</string>
    <string name="button_signin">Iniciar sesión</string>
    <string name="check_verify">Verificar medición</string>
    <string name="title_activity_patient_list">Registros</string>
    <string name="title_activity_clinic_list">Lista Pacientes</string>
    <string name="enviar_por_email">Enviar por correo</string>
    <string name="eliminar">Eliminar medicion</string>
    <string name="manual">Manual</string>
    <string name="dispositivo">Dispositivo</string>
    <string name="verified">Medición verificada</string>
    <string name="radio_left">Brazo izquierdo</string>
    <string name="radio_right">Brazo derecho</string>

    <string name="settings_profile">Ver Perfil</string>
    <string name="settings_text">Configuración</string>
    <string name="settings_logout">Cerrar Sesión</string>

    <string name="card_title1">Resultados calculados</string>
    <string name="card_title2">Resultados manuales</string>
    <string name="email_action">Enviar por email</string>
    <string name="dimen">Añade Mediciones! :)</string>
    <string name="vacia">Lista Vacía</string>
    <string name="unidad_medidad">mmHg</string>
    <string name="loading">Cargando....</string>
    <string name="clinica">Clinica</string>
    <string name="paciente">Paciente</string>
    <string name="tipoCuenta">Elige tipo de cuenta</string>

    <string name="escanear_qr">Escanear QR de paciente</string>
    <string name="bluetooth_le_not_supported">El dispositivo no soporta LE</string>

    <string name="location_permission_disabled">Por favor dar permiso para encontrar el dispositivo</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancelar</string>
    <string name="bluetooth_permission_not_granted">Permiso de bluetooth denegado</string>
    <string name="location_permission_not_granted">Permiso de ubicación denegado</string>
    <string name="bluetooth_permission_granted">Bluetooth activado</string>
    <string name="location_permission_granted">Localización activada</string>


    <string name="btn_scan">Scan</string>
    <string name="no_device_found">No se encontro el dispositivo</string>

    <string name="bluetooth_scan_start">Buscar</string>
    <string name="bluetooth_scan_stop">Parar</string>
    <string name="bluetooth_device_status">Status:</string>
    <string name="bluetooth_device_address">MAC:</string>
    <string name="bluetooth_device_connected">Dispositivo seleccionado</string>

    <string name="char_uuid_missed_connection">0000FFE1&#8211;0000&#8211;1000&#8211;8000&#8211;00805F9B34FB</string>
    <string name="char_uuid_emergency">0000FFE1&#8211;0000&#8211;1000&#8211;8000&#8211;00805F9B34FB</string>
    <string name="char_uuid_emergency_call">0000FFE1&#8211;0000&#8211;1000&#8211;8000&#8211;00805F9B34FB</string>
    <string name="char_uuid_catch">0000FFE1&#8211;0000&#8211;1000&#8211;8000&#8211;00805F9B34FB</string>
    <string name="char_uuid_catch_all">0000FFE1&#8211;0000&#8211;1000&#8211;8000&#8211;00805F9B34FB</string>
    <string name="char_uuid_missed_calls">0000FFE1&#8211;0000&#8211;1000&#8211;8000&#8211;00805F9B34FB</string>
    

</resources>
