<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ElegirTipo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="219dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center"
            android:text="@string/tipoCuenta"
            android:textColor="@color/debug_red"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="32dp">

        <Button
            android:id="@+id/button_clinica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="@drawable/boton_rojo"
            android:fontFamily="@font/averia_gruesa_libre"
            android:text="Clinica"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textStyle="bold"
            tools:text="@string/clinica" />

        <Button
            android:id="@+id/button_paciente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="@drawable/boton_rojo"
            android:fontFamily="@font/averia_gruesa_libre"
            android:gravity="center_vertical|center_horizontal|center"
            android:text="Paciente"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textStyle="bold"
            tools:text="@string/paciente" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>