<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/results_bottom_bar"
        app:layout_constraintStart_toStartOf="parent">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_device_results_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/text_results_title_device"
                android:textColor="@color/colorButton"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_device_results"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="118 / 78"
                android:textColor="@color/colorGoodText"
                android:textSize="56sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_device_results_title" />

            <TextView
                android:id="@+id/tv_device_diastolic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/text_diastolic"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_device_results"
                app:layout_constraintTop_toBottomOf="@+id/tv_device_results" />

            <TextView
                android:id="@+id/tv_device_systolic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/text_systolic"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/tv_device_results"
                app:layout_constraintTop_toBottomOf="@+id/tv_device_results" />

            <View
                android:id="@+id/divider2"
                android:layout_width="0dp"
                android:layout_height="3dp"
                android:layout_marginTop="16dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_device_systolic" />

            <TextView
                android:id="@+id/tv_manual_results_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/text_results_title_manual"
                android:textColor="@color/colorButton"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider2" />

            <EditText
                android:id="@+id/edit_systolic_manual"
                android:layout_width="98dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="number"
                android:textSize="40sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_manual_results_title" />

            <TextView
                android:id="@+id/text_diagonal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/text_forward_slash"
                android:textColor="@android:color/black"
                android:textSize="56sp"
                app:layout_constraintStart_toEndOf="@+id/edit_systolic_manual"
                app:layout_constraintTop_toTopOf="@+id/edit_systolic_manual" />

            <EditText
                android:id="@+id/edit_diastolic_manual"
                android:layout_width="98dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:ems="10"
                android:inputType="number"
                android:textSize="40sp"
                app:layout_constraintStart_toEndOf="@+id/text_diagonal"
                app:layout_constraintTop_toBottomOf="@+id/tv_manual_results_title" />

            <TextView
                android:id="@+id/tv_manual_diastolic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_diastolic"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/edit_diastolic_manual"
                app:layout_constraintStart_toStartOf="@id/edit_diastolic_manual"
                app:layout_constraintTop_toBottomOf="@+id/edit_diastolic_manual" />

            <TextView
                android:id="@+id/tv_manual_systolic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_systolic"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/edit_systolic_manual"
                app:layout_constraintTop_toBottomOf="@+id/edit_systolic_manual"
                app:layout_constraintEnd_toEndOf="@id/edit_systolic_manual"/>

            <View
                android:id="@+id/divider4"
                android:layout_width="0dp"
                android:layout_height="3dp"
                android:layout_marginTop="16dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_manual_diastolic" />

            <TextView
                android:id="@+id/tv_arm_select_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/text_results_title_arm"
                android:textColor="@color/colorButton"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider4" />

            <RadioGroup
                android:id="@+id/radiogroup_arm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_arm_select_title">
                <RadioButton android:id="@+id/radio_arm_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_left"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton android:id="@+id/radio_arm_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_right"
                    android:onClick="onRadioButtonClicked"/>
            </RadioGroup>

            <View
                android:id="@+id/divider5"
                android:layout_width="0dp"
                android:layout_height="3dp"
                android:layout_marginTop="16dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/radiogroup_arm" />

            <TextView
                android:id="@+id/tv_initials_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/text_results_title_initials"
                android:textColor="@color/colorButton"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider5" />

            <EditText
                android:id="@+id/edit_initials"
                android:layout_width="98dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:inputType="textCapCharacters"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_initials_title" />

            <View
                android:id="@+id/divider3"
                android:layout_width="0dp"
                android:layout_height="3dp"
                android:layout_marginTop="16dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_initials" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chart"
                android:layout_width="0dp"
                android:layout_height="240dp"
                android:layout_marginBottom="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/divider3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_goneMarginEnd="12dp"/>

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/results_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="#303030">

        <CheckBox
            android:id="@+id/checkBox_verify_results"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toTopOf="@id/results_bottom_bar"
            app:layout_constraintBottom_toTopOf="@id/button_accept"
            app:layout_constraintStart_toStartOf="@id/button_accept"
            android:text="@string/check_verify"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/button_accept"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/button_accept"
            app:layout_constraintBottom_toBottomOf="@id/results_bottom_bar"
            app:layout_constraintEnd_toStartOf="@+id/button_retry"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="8dp"/>

        <Button
            android:id="@+id/button_retry"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/button_retry"
            app:layout_constraintBottom_toBottomOf="@id/results_bottom_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_accept"
            android:layout_marginBottom="8dp"/>

    </android.support.constraint.ConstraintLayout>



</android.support.constraint.ConstraintLayout>